Fixing width of of heading element on IE

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -174,6 +174,7 @@ li {
   }
 }
 h2 {
+  width: 100%;
   color: #fff;
 }
 .add-container {
